--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/prashantparajuli/authAPI#readme",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "mongoose": "^6.3.5",
